# jmyml

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  idxview.cpp  main.cpp  mldraw.cpp
.github/: ci-deps.dockerfile
.github/workflows/: main.yml
jmyml/: LinearLayer.test.cpp
jmyml/data/: CMakeLists.txt  IdxFile.hpp  IdxFile.test.cpp  IdxViewer.cpp
jmyml/layers/: ActivationLayer.hpp  ActivationLayer.test.cpp  AttentionLayer.hpp  AttentionLayer.test.cpp  ConvolutionalLayer.hpp  ConvolutionalLayer.test.cpp  Layer.hpp  LinearLayer.hpp  LinearLayer.test.cpp  Sequential.hpp  Sequential.test.cpp
jmyml/loss/: Loss.hpp  Loss.test.cpp
